# amfiprot

./: .gitignore  .pylintrc  Jenkinsfile  LICENSE  README.md  Setup_py.bat  Start_py.bat  build.bat  deploy.bat  requirements.txt  setup.cfg
doc/source/: conf.py  index.rst  toc_developers_guide.rst  toc_examples.rst  toc_getting_started.rst  toc_users_guide.rst
doc/source/amfiprot/: amfiprot.rst  packet.rst
doc/source/developers_guide/: build_publish.rst  dev_setup.rst  extending.rst
doc/source/examples/: config.rst  reading_packets.rst
doc/source/getting_started/: getting_started.rst
doc/source/users_guide/: components.rst  examples.rst  overview.rst  users_guide.rst
doc/source/users_guide/components/: block_diagram.drawio  block_diagram_reduced.drawio  connection.rst  device.rst  node.rst  overview.rst  packet.rst
doc/source/users_guide/examples/: config.rst  firmware_update.rst  reading_packets.rst  usb_connection.rst
examples/: RPC.py  global_read.py  keep_in_bootloader_reset_parameter.py  linux_test.py  read_config.py  update_firmware.py
src/amfiprot/: __init__.py  common_payload.py  configurator.py  connection.py  device.py  node.py  packet.py  payload.py  response_payload.py  uart_connection.py  usb_connection.py
