[metadata]
name = amfiprot
version = 0.0.1
author = Kristian Klein-Wengel
author_email = kkw@amfitech.dk
description = Core library for Amfiprot
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy

[options.packages.find]
where = src